ijo sin mute!
mi pini e kalama pi selo kipisi
mi lon e selo mute sin kipisi
mi lon e kule mute sin kipisi
mi weka e pakala pi ma kipisi
mi weka e pakala pi kule tawa kipisi